--- a/packages/Autofac.Wcf.3.0.0/Autofac.Wcf.3.0.0.nuspec
+++ b/packages/Autofac.Wcf.3.0.0/Autofac.Wcf.3.0.0.nuspec
@@ -1,25 +1,25 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
-    <id>Autofac.Mvc4</id>
-    <version>3.1.0</version>
-    <title>Autofac ASP.NET MVC4 Integration</title>
+    <id>Autofac.Wcf</id>
+    <version>3.0.0</version>
+    <title>Autofac WCF Integration</title>
     <authors>Autofac Contributors</authors>
     <owners>Autofac Contributors</owners>
     <licenseUrl>http://www.opensource.org/licenses/mit-license.php</licenseUrl>
     <projectUrl>http://autofac.org/</projectUrl>
     <iconUrl>http://code.google.com/p/autofac/logo</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>ASP.NET MVC4 Integration for Autofac</description>
-    <summary>Provides an IControllerFactory implementation and other integration points for System.Web.Mvc.</summary>
+    <description>Windows Communication Foundation integration for Autofac</description>
+    <summary>Provides dependency injection into WCF services.</summary>
     <releaseNotes />
     <copyright />
     <language>en-US</language>
     <dependencies>
-      <dependency id="Autofac" version="3.1.0" />
+      <dependency id="Autofac" version="3.0.0" />
     </dependencies>
     <references>
-      <reference file="Autofac.Integration.Mvc.dll" />
+      <reference file="Autofac.Integration.Wcf.dll" />
     </references>
   </metadata>
 </package>
